agregar # a acerca de mi

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="#Mi-perfil">Mi Perfil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="acerca-de-mi"> Acerca de mi</a>
+                        <a class="nav-link" href="#acerca-de-mi"> Acerca de mi</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Portafolio">Portafolio</a>
