--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
-    <title>Seba Mieres</title>
+    <title>CV Sebastián Mieres G</title>
     <script src="https://kit.fontawesome.com/932a03f3dd.js" crossorigin="anonymous"></script>
    
     <link rel="stylesheet" href="assets/css/estilos.css">
@@ -25,7 +25,7 @@
         <div class="container">
             <a class="navbar-brand"  href="#">
                 <img src="assets/img/foto cv.jpg" alt="Imgen perfil">
-             <strong>Sebastián Mieres González </strong>
+             <strong> Curriculum Vitae </strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,11 +55,11 @@
 
     <!-- Encabezado -->
 
-    <header id="Hero-Section" class="text-light text-end py-5 mt-5">
+    <header id="Hero-Section" class="text-light text-star py-5 mt-5">
         <div class="container">
             <div>
                 <h5 class="display-4 fw-bold my-5">
-                    Nuestro futuro depende de <br> como entendamos el pasado
+                    "Nuestro futuro depende de <br> cómo entendamos el pasado"
                 </h5>
                 <figcaption class="blockquote-footer text-light">
                     <cite title="Source Title">Gustavo Cerati</cite>
@@ -69,6 +69,7 @@
     </header>
 
 <!-- Mi perfil -->
+
     <section id="Mi-perfil" class="container text-star p-5 my-5">
 
 
@@ -244,41 +245,7 @@
 
 
 
-    <section id="Contacto" class="container my-5">
-
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
-
-       
-        <form>
-
-
-            <div class="form-group mb-4">
-                <label class="mb-2">Nombre</label>
-                <input class="form-control" placeholder="Nombre">
-            </div>
-
-            <div class="form-group mb-4">
-                <label class="mb-2">Correo electrónico</label>
-                <input class="form-control" placeholder="Correo electrónico" />
-            </div>
-
-
-            <div class="form-group">
-                <label class="mb-2">Mensaje</label>
-                <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
-            </div>
-
-            <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
-            </div>
-
-
-
-        </form>
-
-    </section>
-
-
+<!-- Pie de página -->
 
     <footer class="bg-dark text-center text-light p-4">
         <a href="https://github.com/SebaMieres/SebaMieres.github.io"><i class="fa-brands fa-github fa-2x"></i></a>
